Enable toggleSubmitButton() while the page loading

--- a/templates/select_attachments.html
+++ b/templates/select_attachments.html
@@ -179,7 +179,7 @@
 
     <script>
         window.submitting = false;
-
+        toggleSubmitButtons(true); // Enable buttons on page load
 
         function toggleSubmitButtons(enabled) {
             const buttons = ['downloadBtn', 'bsodBtn', 'etlLlmBtn'];
@@ -317,7 +317,7 @@
         const AI_ANALYSIS_URL = "{{ url_for('llm.get_llm_analysis') }}";
         function loadAiAnalysis() {
 
-            toggleSubmitButtons(false);
+            // toggleSubmitButtons(false);
             $.ajax({
                 url: AI_ANALYSIS_URL,
                 method: 'GET',
@@ -327,14 +327,14 @@
                     if (response.success) {
                         console.log(`response.ai_analysis: ${JSON.stringify(response.ai_analysis, null, 2)}`)
                         $('#ai-analysis-content').html(renderAiAnalysis(response.ai_analysis));
-                        toggleSubmitButtons(true);
+                        // toggleSubmitButtons(true);
                     } else {
                         $('#ai-analysis-content').html(`
                             <div class="error-message">
                                 <strong>error:</strong> ${response.error}
                             </div>
                         `);
-                        toggleSubmitButtons(true);
+                        // toggleSubmitButtons(true);
                     }
                 },
                 error: function(xhr, status, error) {
